# Freecord

./: CMakeLists.txt  README.md  example.json
imgs/icons/: Room.psd  status.psd
src/: dialogaboutqt.cpp  dialogaboutqt.h  dialogconnect.cpp  dialogconnect.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: dialogaboutqt.ui  dialogconnect.ui  mainwindow.ui
